# pih-service

./: .env  Cargo.toml  Dockerfile  compose.yaml  justfile
db/: password.txt
src/: config.rs  lib.rs  main.rs
src/routes/: health_check.rs  mod.rs
